# esign.konek.vn

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  test_pdf.rs  test_pdf_parse.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  font.rs  lib.rs  main.rs  pdf.rs  pkcs11.rs  tsa.rs
src-tauri/src/pkcs11/: helpers.rs  library_paths.rs  manager.rs  mod.rs  tests.rs  types.rs
src/components/: FileDropzone.tsx  PDFPreview.tsx  PDFPreviewModal.tsx  PageNavigator.tsx  PinInput.tsx  ResultModal.tsx  SignaturePositioner.tsx  TemplateDesigner.tsx  TemplatePreview.tsx  TokenStatus.tsx
src/hooks/: useSignaturePosition.ts  useSignatureTemplate.ts  useSigning.ts  useToken.ts
src/lib/: certificate-utils.ts  pdf-coordinates.ts  signature-template-defaults.ts  tauri.ts
